--- a/src/styles.css
+++ b/src/styles.css
@@ -45,6 +45,10 @@ nav { margin-bottom: 1.25rem; }
 	position: absolute;
 	right: 1rem;
 }
+
+#whats-new {
+    height: 30rem;
+}
 @media (min-width: 992px) { 
 .loading-img {margin-left: 40%; margin-top: 10rem;}
 #projectName{display:inline-block;}
@@ -55,4 +59,5 @@ nav { margin-bottom: 1.25rem; }
 .loading-img {margin-left: 5rem; margin-top: 10rem;}
 #projectName{display:none;}
 #navbarToggler{display:block;}
+#whats-new { height: unset;}
 }
